# sirpi

./: .gitignore  README.md  generate_architecture_diagram.py  sirpi_devpost_submission.md  sirpi_svg_architecture_diagram.txt
backend/: .env.example  DEPLOYMENT.md  README.md  deploy.sh  lambda_handler.py  pyproject.toml  setup-secrets.sh  template.yaml
backend/.cursor/: settings.json
backend/database/: schema.sql
backend/database/migrations/: 001_add_s3_and_state_tracking.sql  002_add_aws_connections.sql  003_add_pr_tracking.sql  004_add_agentcore_memory.sql  004_add_aws_role_arn.sql  005_add_account_id_to_aws_connections.sql  README.md
backend/src/: __init__.py  lambda_handler.py  main.py
backend/src/agentcore/: __init__.py  models.py  orchestrator.py  validation.py
backend/src/agentcore/agents/: __init__.py  base.py  context_analyzer.py  dockerfile_generator.py  terraform_generator.py
backend/src/agentcore/cloudformation/: sirpi-setup.yaml
backend/src/api/: __init__.py  aws.py  clerk_webhooks.py  deployments.py  github.py  github_webhooks.py  health.py  projects.py  pull_requests.py  sirpi_assistant.py  workflows.py
backend/src/core/: config.py
backend/src/models/: __init__.py  schemas.py
backend/src/services/: __init__.py  agentcore_memory.py  agentcore_memory_real.py  aws_connection.py  cloudformation_deployment.py  deployment.py  deployment_summary.py  docker_build.py  github_app.py  github_pr.py  s3_storage.py  sirpi_assistant.py  supabase.py  validation.py
backend/src/utils/: clerk_auth.py  logging_config.py  session_logger.py
(+35 files in other folders)
