[project]
name = "sirpi-aws-devpost"
version = "0.1.0"
description = "AI-Native DevOps Automation Platform using AWS Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
    "mangum>=0.18.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.35",
    "sse-starlette>=2.1.0",
    "pyjwt[crypto]>=2.8.0",
    "e2b-code-interpreter>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
